--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TOKEN = MTAzMzAyNDgwODE0Njk2NDU3MQ.G2dlAL.0qdXOjAE_0OELzg7MTQ_ywqfO5MW0h4wpn6vW4
 DEFAULTEMBEDCOLOR = 0x1c7d44
+SECRET_KEY = yesyesyes
