add delete.py add removeFromDb.py change logToDb.py to use uuids instead of member ids make member untypehinted in formatString.py

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN = MTAzMzAyNDgwODE0Njk2NDU3MQ.G2dlAL.0qdXOjAE_0OELzg7MTQ_ywqfO5MW0h4wpn6vW4
+TOKEN = MTAzMzAyNDgwODE0Njk2NDU3MQ.G8AuBc.jG1NKcjHBgHdEzSDxYtQbg_wRoIZZNWYI2Ho98
 DEFAULTEMBEDCOLOR = 0x1c7d44
 SECRET_KEY = yesyesyes
